--- a/designs/index.html
+++ b/designs/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel= "stylesheet" href="..\style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 
@@ -42,20 +42,20 @@
 
 
     <div class="container-fluid my-auto mx-auto" id="card-master">
-      <a class="btn mt-3 mb-3" data-toggle="collapse" href="#collapse1">Logo Designs ▾</a>
+      <a class="btn mt-3 mb-3 mx-3" data-toggle="collapse" href="#collapse1">Logo Designs ▾</a>
       <div id="collapse1" class="panel-collapse collapse">
         <div class="container-fluid my-auto">
           <div class="d-flex" id="cont-cards">
-            <div class="card mx-auto my-2 border-0" style="width: 20rem;">
+            <div class="card mx-auto my-2 border-0">
               <img class="card-img my-auto mx-auto" src="icarus.png">
             </div>
-            <div class="card mx-auto my-2 border-0" style="width: 20rem;">
+            <div class="card mx-auto my-2 border-0">
               <img class="card-img my-auto mx-auto" src="bon.png">
             </div>
-            <div class="card mx-auto my-2 border-0" style="width: 18rem;">
+            <div class="card mx-auto my-2 border-0">
               <img class="card-img my-auto mx-auto" src="jumpcut.png">
             </div>
-            <div class="card mx-auto my-2 border-0" style="width: 20rem;">
+            <div class="card mx-auto my-2 border-0">
               <img class="card-img my-auto mx-auto" src="fulllogo.png">
             </div>
 
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <a class="btn mt-3 mb-3" data-toggle="collapse" href="#collapse2">3D Renders ▾</a>
+      <a class="btn mt-3 mb-3 mx-3" data-toggle="collapse" href="#collapse2">3D Renders ▾</a>
       <div id="collapse2" class="panel-collapse collapse">
         <div class="container-fluid my-auto">
           <div id="carousel-designs" class="carousel slide mx-auto">
