--- a/extras/index.html
+++ b/extras/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel= "stylesheet" href="..\style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 
@@ -43,10 +43,10 @@
           <a class="btn btn-outline-secondary my-1" data-toggle="collapse" href="#collapse1">2019 ▾</a>
           <div id="collapse1" class="panel-collapse collapse">
             <ul class="list-group">
-              <li class="list-group-item" data-link="fatberg.md"><a href="#">Iron Warrior Article - Fatbergs</a></li>
-              <li class="list-group-item" data-link="innovation.md"><a href="#">Iron Warrior Article - Innovation</a></li>
-              <li class="list-group-item" data-link="grammys.md"><a href="#">Iron Warrior Article - Grammys 2019</a></li>
-              <li class="list-group-item" data-link="housing.md"><a href="#">Iron Warrior Article - Waterloo Student Housing</a></li>
+              <li class="list-group-item" data-link="fatberg.md"><a href="#">IW Article - Fatbergs</a></li>
+              <li class="list-group-item" data-link="innovation.md"><a href="#">IW Article - Innovation</a></li>
+              <li class="list-group-item" data-link="grammys.md"><a href="#">IW Article - Grammys 2019</a></li>
+              <li class="list-group-item" data-link="housing.md"><a href="#">IW Article - Waterloo Student Housing</a></li>
             </ul>
           </div>
           <a class="btn btn-outline-secondary my-1" data-toggle="collapse" href="#collapse2">2018 ▾</a>
@@ -57,17 +57,17 @@
           <a class="btn btn-outline-secondary my-1" data-toggle="collapse" href="#collapse3">2017 ▾</a>
           <div id="collapse3" class="panel-collapse collapse">
             <ul class="list-group">
-              <li class="list-group-item" data-link="oscars.md"><a href="#">Iron Warrior Article - 2017 Oscar Noms</a></li>
-              <li class="list-group-item" data-link="autonomoose.md"><a href="#">Iron Warrior Article - Autonomoose</a></li>
+              <li class="list-group-item" data-link="oscars.md"><a href="#">IW Article - 2017 Oscar Noms</a></li>
+              <li class="list-group-item" data-link="autonomoose.md"><a href="#">IW Article - Autonomoose</a></li>
             </ul>
           </div>
             <a class="btn btn-outline-secondary my-1" data-toggle="collapse" href="#collapse4">2016 ▾</a>
             <div id="collapse4" class="panel-collapse collapse">
             <ul class="list-group">
-              <li class="list-group-item" data-link="trudeau.md"><a href="#">Iron Warrior Article - Trudeau vs. Youth</a></li>
-              <li class="list-group-item" data-link="biomimicry.md"><a href="#">Iron Warrior Article - Biomimicry</a></li>
-              <li class="list-group-item" data-link="fakebook.md"><a href="#">Iron Warrior Article - Fakebook</a></li>
-              <li class="list-group-item" data-link="creepyclowns.md"><a href="#">Iron Warrior Article - Clown Epidemic</a></li>
+              <li class="list-group-item" data-link="trudeau.md"><a href="#">IW Article - Trudeau vs. Youth</a></li>
+              <li class="list-group-item" data-link="biomimicry.md"><a href="#">IW Article - Biomimicry</a></li>
+              <li class="list-group-item" data-link="fakebook.md"><a href="#">IW Article - Fakebook</a></li>
+              <li class="list-group-item" data-link="creepyclowns.md"><a href="#">IW Article - Clown Epidemic</a></li>
             </ul>
           </div>
       </div>
