--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel= "stylesheet" href="..\style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet">
 
     <title>projects</title>
     <link rel="icon" href="..\ap-icon.png">
@@ -37,8 +37,8 @@
         </div>
       </div>
     </nav>
-    <div class="container mt-1 mb-5" id="cards-projects">
-      <div class="card mx-auto my-2" style="width: 18rem;">
+    <div class="card-deck mt-5 mx-auto" id="cards-projects">
+      <div class="card mx-2 my-2" style="width: 18rem;">
         <img class="card-img-top" src="insomniac\images\insomniac-title.png" alt="Card image cap">
         <div class="card-body">
           <h4>Insomniac</h4>
@@ -46,16 +46,16 @@
           <a href="insomniac\index.html" class="btn btn-primary">Check it out</a>
         </div>
       </div>
-      <div class="card mx-auto my-2" style="width: 18rem;">
-        <img class="card-img-top" src="lingomizer\snip.PNG" alt="Card image cap">
+      <div class="card mx-2 my-2" style="width: 18rem;">
+      <img class="card-img-top" src="lingomizer\snip.PNG" alt="Card image cap">
         <div class="card-body">
           <h4>Lingomizer</h4>
-          <p class="card-text">A neat little app that automatically selects a word and translates it into another language. HTML, CSS, JS, JSON, API calls.</p>
+          <p class="card-text">A neat little app that randomly selects an english word and translates it into another language. HTML, CSS, JS, JSON, API calls.</p>
           <a href="lingomizer\index.html" class="btn btn-primary">Check it out</a>
         </div>
       </div>
-      <div class="card mx-auto my-2" style="width: 18rem;">
-        <img class="card-img-top" src="test-6.jpeg" alt="Card image cap">
+      <div class="card mx-2 my-2" style="width: 18rem;">
+     <img class="card-img-top" src="test-6.jpeg" alt="Card image cap">
         <div class="card-body">
           <h4>Coming Soon</h4>
           <p class="card-text">I'll put more stuff here!!</p>
@@ -67,10 +67,31 @@
     <footer class="footer text-center fixed-bottom">
       <p>♡ 2019</p>
     </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
+
+<!--  <script>
+  const pics = document.getElementsByClassName('card-img-top');
+  const buttons = document.getElementsByClassName('btn btn-primary');
+  console.log(buttons);
+  console.log(pics);
+
+  function changeFilterOn(num) {
+      pics[num].style.filter = "none";
+  }
+  function changeFilterOff(num) {
+      pics[num].style.filter = "grayscale(100%)";
+  }
+
+  var i;
+    buttons[i].addEventListener('mouseenter', changeFilterOn(i));
+    buttons[i].addEventListener('mouseleave', changeFilterOff(i));
+
+  </script> -->
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
 </html>
