--- a/designs/index.html
+++ b/designs/index.html
@@ -73,22 +73,30 @@
               <li data-target="#carousel-designs" data-slide-to="2"></li>
               <li data-target="#carousel-designs" data-slide-to="3"></li>
               <li data-target="#carousel-designs" data-slide-to="4"></li>
+              <li data-target="#carousel-designs" data-slide-to="5"></li>
+              <li data-target="#carousel-designs" data-slide-to="6"></li>
             </ol>
             <div class="carousel-inner mx-auto">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="render-1.jpg" alt="First slide">
+                <img class="d-block w-100" src="apartment-1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="render-2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="apartment-2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="render-3.jpg" alt="Third slide">
+                <img class="d-block w-100" src="apartment-3.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="render-4.jpg" alt="">
+                <img class="d-block w-100" src="apartment-4.jpg" alt="">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="render-5.jpg" alt="">
+                <img class="d-block w-100" src="apartment-5.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="apartment-6.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="apartment-7.jpg" alt="">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carousel-designs" role="button" data-slide="prev">
